Fix legibility of visited links in notices.

--- a/client/components/notice/style.scss
+++ b/client/components/notice/style.scss
@@ -93,6 +93,10 @@
 			color: $white;
 			text-decoration: none;
 		}
+
+		&:visited {
+			color: lighten( $gray, 10% );
+		}
 	}
 
 	ul {
